--- a/kost.html
+++ b/kost.html
@@ -18,6 +18,9 @@
             <div class="box b"><font color="yellow" size="15" face="fantasy"><a href="C:\Users\zhiba\OneDrive\Рабочий стол\Сайт для практики\nws.html">Новости</a></font></div>
             <div class="box c"><font color="yellow" size="15" face="fantasy"><a href="C:\Users\zhiba\OneDrive\Рабочий стол\Сайт для практики\bt.html">О нас</a></font></div>
         </div>
+        <div class="wrapperb">
+            <div class="box d"><p align="center>"><font color="white" size="5" face="fantasy"><i>Спасибо за то, что выбрали нас. Пожалуйста, нажмите на интересующий Вас раздел.</i></p></font></div>
+        </div>
         <div class="footer">
             <div class="footer">
                 <footer>
